# navier-psc

./: .gitignore  Dockerfile  MODELS.md  README.md  navier.yaak.json  package.json  turbo.json
apps/app/: README.md  biome.json  package.json
apps/app/app/: globals.css  layout.tsx  page.tsx
apps/app/components/: config-form.tsx  config-list.tsx  config-preview.tsx  header.tsx  parameter-inputs.tsx  simulation-list.tsx
apps/app/lib/: api.ts  store.ts  types.ts  validation.ts
apps/server/: README.md  alembic.ini  main.py  package.json  pyproject.toml
apps/server/migrations/: env.py
apps/server/migrations/versions/: 4af1d594909f_init_db.py
apps/server/psc/: __init__.py  db.py  models.py  schemas.py  server.py
apps/server/psc/configurator/: __init__.py  configurator.py  errors.py  models.py  parameters.py  registry.py
apps/server/psc/simulation/: __init__.py  demo.py
