[tool.poetry]
name = "psc"
version = "0.1.0"
description = "Parameter-Sweep Configurator Server"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"
packages = [
    { include = "server", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "parallel: marks tests that can run in parallel"
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "D", # pydocstyle
]
ignore = ["D100", "D104", "D202", "D203", "D204", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["psc"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
